--- a/index.html
+++ b/index.html
@@ -7,30 +7,55 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | 3-column preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
 
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
+  <div id="cars" class="container">
+    <div class="car-card animate__animated animate__backInDown">
+      <div class="positioned-car-div">
+        <img src="images/icon-sedans.svg" alt="Sedan car">
+      </div>
+      <h1>Sedans</h1>
+      <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+        or on your next road trip.
+      </p>
+      <a href="/" class="styled-link">learn more</a>
+    </div>
 
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <div class="car-card animate__animated animate__flash">
+      <div class="positioned-car-div">
+        <img src="images/icon-suvs.svg" alt="SUV car">
+      </div>
+      <h1>SUVs</h1>
+      <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+        and off-road adventures.
+      </p>
+
+      <a href="/" class="styled-link">learn more</a>
+    </div>
+
+    <div class="car-card animate__animated animate__backInUp">
+      <div class="positioned-car-div">
+        <img src="images/icon-luxury.svg" alt="luxury car">
+      </div>
+      <h1>Luxury</h1>
+      <p> Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+      rental and arrive in style.
+      </p>
+      <a href="/" class="styled-link">learn more</a>
+    </div>
+  </div>  
+    
+    
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Karen Simisola Efereyan</a>.
+    </div>
+
 </body>
 </html>
