Becoming an SEO person slowly

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="author" content = "Karen Simisola Efereyan">
+  <meta name="description" content = "A simple coding challenge from frontendmentor to test
+  knowledge of layouts and media responsiveness. I added a little bit 
+  of animations to make it less boring">
+  <meta name="keywords" content = "frontendmentor, frontendmentor challenge, 
+  html, css, website, webdevvelopment">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | 3-column preview card component</title>
